@@ -66,7 +66,7 @@ set(ENGINE_SRCS
         Alpha/Engine/Renderer/OpenGL/OpenGLFramebuffer.cpp
 
         Alpha/Gui/BuildInWidgets/DockerWidget.cpp
-        Alpha/Gui/BuildInWidgets/ViewportWidget.cpp Alpha/Engine/Renderer/OpenGL/OpenGLTexture.cpp Alpha/Engine/Renderer/OpenGL/OpenGLTexture.h Alpha/ThirdParty/stb/stb_image.cpp Alpha/ThirdParty/stb/stb_image.h Alpha/Engine/Camera/Camera.h Alpha/Engine/Camera/EulerCamera.cpp Alpha/Engine/Camera/EulerCamera.h Alpha/Engine/Renderer/Shader.cpp Alpha/Engine/Renderer/Shader.h Alpha/Engine/Renderer/OpenGL/OpenGLShader.cpp Alpha/Engine/Renderer/OpenGL/OpenGLShader.h Alpha/Engine/Material/Material.cpp Alpha/Engine/Material/Material.h)
+        Alpha/Gui/BuildInWidgets/ViewportWidget.cpp Alpha/Engine/Renderer/OpenGL/OpenGLTexture.cpp Alpha/Engine/Renderer/OpenGL/OpenGLTexture.h Alpha/ThirdParty/stb/stb_image.cpp Alpha/ThirdParty/stb/stb_image.h Alpha/Engine/Camera/Camera.h Alpha/Engine/Camera/EulerCamera.cpp Alpha/Engine/Camera/EulerCamera.h Alpha/Engine/Renderer/Shader.cpp Alpha/Engine/Renderer/Shader.h Alpha/Engine/Renderer/OpenGL/OpenGLShader.cpp Alpha/Engine/Renderer/OpenGL/OpenGLShader.h Alpha/Engine/Material/Material.cpp Alpha/Engine/Material/Material.h Alpha/Engine/Loader/ImageLoader.cpp Alpha/Engine/Loader/ImageLoader.h)
 
 add_executable(AlphaEngine
         MACOSX_BUNDLE
